--- a/src/style.css
+++ b/src/style.css
@@ -88,6 +88,30 @@ li {
     cursor: pointer;
 }
 
+.my-list-button {
+    margin: auto;
+    margin-left: 14.5%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.list-delete {
+    visibility: hidden;
+    margin: auto;
+    color: var(--high-priority);
+    font-size: 24px;
+    border: none;
+    cursor: pointer;
+}
+
+.active + .list-delete {
+    visibility: visible;
+}
+
+.list-delete:hover {
+    color: var(--close-color);
+}
+
 .active {
     background-color: var(--active-button);
 }
