Edit styling of task container

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
     --input-color: #cbd5e1;
     --submit-color: #15803d;
     --close-color: #f87171;
+    --edit-button: #60a5fa;
     --active-button: #d4d4d4;
     --high-priority: #b91c1c;
     --med-priority: #f97316;
@@ -181,7 +182,7 @@ li {
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 75px;
+    height: 90px;
     margin: 10px;
     border-radius: 10px;
     box-shadow: 2px 2px 2px 2px var(--shadow-color);
@@ -189,7 +190,8 @@ li {
 
 .task-header {
     margin-left: 15px;
-    font-size: 22px;
+    font-size: 24px;
+    font-weight: bolder;
 }
 
 .task-button-container {
@@ -207,9 +209,7 @@ li {
     font-size: 24px;
     width: 50px;
     padding: 5px;
-    color: white;
     border: none;
-    border-radius: 50px;
     cursor: pointer;
 }
 
@@ -229,10 +229,25 @@ li {
     color: var(--submit-color);
 }
 
+.edit-task {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin-bottom: 5px;
+    margin-right: 27px;
+    font-size: 24px;
+    border: none;
+    color: var(--edit-button);
+}
+
 .task-description {
     display: none;
-    font-size: 20px;
-    padding: 20px;
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    margin-right: 100px;
 }
 
 .task-date {
