--- a/src/style.css
+++ b/src/style.css
@@ -360,7 +360,7 @@ li {
 }
 
 #task-submit, .task-save {
-    margin-top: 50px;
+    margin-top: 35px;
     margin-bottom: 10px;
 }
 
@@ -383,7 +383,7 @@ label {
     align-items: center;
     flex-direction: column;
     width: 600px;
-    height: 500px;
+    height: 550px;
     margin: auto;
     margin-top: 250px;
     border-radius: 10px;
@@ -407,7 +407,6 @@ label {
     height: 30px;
     padding: 10px;
     margin: auto;
-    margin-bottom: 10px;
     border-radius: 10px;
     border: none;
 }
@@ -419,7 +418,6 @@ label {
     height: 100px;
     padding: 10px;
     margin: auto;
-    margin-bottom: 10px;
     border-radius: 20px;
     border: none;
 }
@@ -430,9 +428,14 @@ label {
     margin: auto;
 }
 
-#task-due-date, #edit-due-date {
+.task-name-error, .task-desc-error, .task-date-error {
+    margin-left: 100px;
+    font-size: 12px;
+    letter-spacing: .25ch;
+    font-style: italic;
     margin-bottom: 10px;
 }
+
 
 footer {
     background-color: var(--background-color);
